[project]
name = "python-file"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cheroot>=10.0.1",
    "dmpython>=2.5.22",
    "mysql-connector>=2.2.9",
    "pandas>=2.3.2",
    "pymongo>=4.14.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "wsgidav>=4.3.3",
]
